fix bugs in objectives

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -42,10 +42,10 @@
     "\n",
     "After completing this tutorial, you will be able to:\n",
     "\n",
-    "* Understanf the differences between the directional (DP3.30006.001) and bidirectional (DP3.30006.002) surface reflectance data and H5 conten.ts\n",
+    "* Understand the differences between the directional (DP3.30006.001) and bidirectional (DP3.30006.002) surface reflectance data and H5 contents.\n",
     "* Use the package `h5py` and the `visititems` method to read a bidirectional reflectance HDF5 file and view data attributes.\n",
-    "* Read in and plot some of threflectance A ancilla_Imagery and Logsry data, including t W weatheQ qualitI indicator and thAc aquisitioD da.te\n",
-    "* Extract and ploan RGB and False-Color image from different band combinations of the reflectance data.a.\n",
+    "* Read in and plot some of the reflectance Ancillary Imagery and Logs data, including the Weather Quality Indicator and the Acquisition Date.\n",
+    "* Extract and plot RGB and False-Color images from different band combinations of the reflectance data.\n",
     "\n",
     "### Install Python Packages\n",
     "\n",
