fix typo in brdf refl image link

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -104,8 +104,8 @@
     "NEON followed the FlexBRDF approach to perform the topographic and BRDF corrections, following <a href=\"https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021JG006622\" target=\"_blank\">Queally et al. 2022</a>. Details of the implementation are provided in the Topographic and BRDF Corrections ATBD, which can be downloaded from the link at the bottom of the previous section. Section 4.2 in the linked document provides a short summary of the approach. The BRDF correction is applied using the University of Wisconsin Environmental Spectroscopy Lab's Python-based open-source software <a href=\"https://github.com/EnSpec/hytools\" target=\"_blank\">HyTools</a>. \r\n",
     "\n",
     "<figure>\n",
-    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/brdf_Fcorrectio_rmse.pngG\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.pngG\"></a>\n",
+    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\"></a>\n",
     "    <figcaption> Example dataset showing the a. original and b. BRDF-corrected datasets at the NEON CPER site; c. shows the difference in RMSE between the data processed with and without the BRDF correction.  \n",
     "    </figcaption>\n",
     "</figure>\n",
