fix image links

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -56,11 +56,11 @@
     "\n",
     "### Download Data\n",
     "\n",
-    "To complete this tutorial, you will download and read in surface bidirectional reflectance data collected at the NEON <a href=\"https://www.neonscience.org/field-sites/liro\" target=\"_blank\">Little Rock Lake (LIRO)</a> aquatic site in Wisconsin. \n",
+    "To complete this tutorial, you will download and read in surface bidirectional reflectance data collected at the NEON <a href=\"https://www.neonscience.org/field-sites/liro" target=\"_blank\">Little Rock Lake (LIRO)</a> aquatic site in Wisconsin. \n",
     "\n",
     "You can download this data from the NEON Data portal, using the Python neonutilities package (as shown in the lesson), or by clicking the link below:\n",
     "\n",
-    "**Download the LI Bid Directional Reflectance Tile:** <a href=\"https://storage.googleapis.com/neon-aop-provisional-products/2022/FullSite/D05/2022_LIRO_3/L3/Spectrometer/Reflectance/NEON_D05_LIRO_DP3_290000_5097000_bidirectional_reflectance.h5\" class=\"link--button link--arrow\">NEON_D05_LIRO_DP3_290000_5097000_reflectance.h5</a>\n",
+    "**Download the LI Bidirectional Reflectance Tile:** <a href=\"https://storage.googleapis.com/neon-aop-provisional-products/2022/FullSite/D05/2022_LIRO_3/L3/Spectrometer/Reflectance/NEON_D05_LIRO_DP3_290000_5097000_bidirectional_reflectance.h5\" class=\"link--button link--arrow\">NEON_D05_LIRO_DP3_290000_5097000_reflectance.h5</a>\n",
     "\n",
     "### Additional Resources\n",
     "\n",
@@ -104,8 +104,8 @@
     "NEON followed the FlexBRDF approach to perform the topographic and BRDF corrections, following <a href=\"https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2021JG006622\" target=\"_blank\">Queally et al. 2022</a>. Details of the implementation are provided in the Topographic and BRDF Corrections ATBD, which can be downloaded from the link at the bottom of the previous section. Section 4.2 in the linked document provides a short summary of the approach. The BRDF correction is applied using the University of Wisconsin Environmental Spectroscopy Lab's Python-based open-source software <a href=\"https://github.com/EnSpec/hytools\" target=\"_blank\">HyTools</a>. \r\n",
     "\n",
     "<figure>\n",
-    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\">\n",
-    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\"></a>\n",
+    "    <a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\">\n",
+    "    <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/brdf_correction_rmse.png\"></a>\n",
     "    <figcaption> Example dataset showing the a. original and b. BRDF-corrected datasets at the NEON CPER site; c. shows the difference in RMSE between the data processed with and without the BRDF correction.  \n",
     "    </figcaption>\n",
     "</figure>\n",
@@ -115,8 +115,8 @@
     "If you're working with the bidirectional reflectance data for the first time, we encourage you to start by exploring the HDF5 file in HDFView, a free softwar programe that can be downloaded from the <a href=\"https://www.hdfgroup.org/downloads/hdfview/\" target=\"_blank\">HDF Group Download Page</a>. This provides a more interactive way to view the contents of the hdf5 files. The figure below shows a DP3.30006.002 and DP3.30006.001 file in HDFView for comparison.\n",
     "\n",
     "<table><tr>\n",
-    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-introlliroO_rdfl_reflhdfvieww.png\" width=\"500\"> </td>\n",
-    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphicspy-figs/hyperspectral-refl-brdf-intro/serc_dir_refl_hdfvieww.png\" width=\"500\"> </td>\n",
+    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-introlliroO_rdfl_reflhdfview.png\" width=\"500\"> </td>\n",
+    "<td> <img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/py-figs/hyperspectral-refl-brdf-intro/serc_dir_refl_hdfview.png\" width=\"500\"> </td>\n",
     "</table>\n",
     "<figcaption> HDFView of the new DP3.30006.002 (left) and original DP3.30006.001 (right). Highlighted fields on the left image indicate new or updated fields in the .002 revision.\n",
     "</figcaption>\n",
