--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5-bidirectional/intro-l3-refl-h5-brdf-corrected.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "### Download Data\n",
     "\n",
-    "To complete this tutorial, you will download and read in surface bidirectional reflectance data collected at the NEON <a href=\"https://www.neonscience.org/field-sites/liro" target=\"_blank\">Little Rock Lake (LIRO)</a> aquatic site in Wisconsin. \n",
+    "To complete this tutorial, you will download and read in surface bidirectional reflectance data collected at the NEON <a href=\"https://www.neonscience.org/field-sites/liro\" target=\"_blank\">Little Rock Lake (LIRO)</a> aquatic site in Wisconsin. \n",
     "\n",
     "You can download this data from the NEON Data portal, using the Python neonutilities package (as shown in the lesson), or by clicking the link below:\n",
     "\n",
